--- a/src/modules/html2js/html2js.html
+++ b/src/modules/html2js/html2js.html
@@ -12,26 +12,28 @@
 <button id="btn">生成</button>
 <textarea name="output" id="output" cols="80" rows="10" onfocus="this.select()"></textarea>
 <script>
-    var input = document.getElementById('input');
-    var output = document.getElementById('output');
-    var js = document.getElementById('js');
-    var btn = document.getElementById('btn');
-    btn.onclick = function (argument) {
-        var text = input.value;
-        text = text.trim()
-               .replace(/[\r\n\t]/g, '')
-               .replace(/\s+/g, ' ')
-               .replace(/\\/g, '\\\\')
-               .replace(/'/g, '\\x27')
-               .replace(/"/g, '\\x22')
-               .replace(/\//g, '\\/')
-               .replace(/\n/g, '\\n')
-               .replace(/\r/g, '\\r')
-               .replace(/\t/g, '\\t')
+    (function(){
+      var input = document.getElementById('input');
+      var output = document.getElementById('output');
+      var js = document.getElementById('js');
+      var btn = document.getElementById('btn');
+      btn.onclick = function (argument) {
+          var text = input.value;
+          text = text.trim()
+                 .replace(/[\r\n\t]/g, '')
+                 .replace(/\s+/g, ' ')
+                 .replace(/\\/g, '\\\\')
+                 .replace(/'/g, '\\x27')
+                 .replace(/"/g, '\\x22')
+                 .replace(/\//g, '\\/')
+                 .replace(/\n/g, '\\n')
+                 .replace(/\r/g, '\\r')
+                 .replace(/\t/g, '\\t')
 
-        text = 'document.write(\'' + text + '\')';
-        output.value = text;
-    }
+          text = 'document.write(\'' + text + '\')';
+          output.value = text;
+      }
+  })();
 </script>
 </body>
 </html>
